--- a/infra/package.json
+++ b/infra/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@pulumi/aws": "^5.31.0",
     "@pulumi/pulumi": "^3.57.1",
+    "@pulumi/awsx": "^1.0.0"
+  },
+  "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-semistandard": "^17.0.0"
