basic security in place

--- a/infra/Pulumi.dev.yaml
+++ b/infra/Pulumi.dev.yaml
@@ -1,3 +1,1 @@
-encryptionsalt: v1:NG1goLZzeW4=:v1:QaQfu10j7AF0tr+p:QkV/UlEz/Ey1fvWO0INuIRkGJ3o72A==
-config:
-  aws:region: eu-west-1
+encryptionsalt: v1:at49k9H524A=:v1:Y3BGKneLosJIF2ut:eF/OJB1ZutdIyPvWFifL/H56J68Qyw==
